@@ -1538,8 +1538,7 @@ proc check_effective_target_vect_long_long { } {
     } else {
         set et_vect_long_long_saved 0
         if { [istarget i?86-*-*]
-              || [istarget x86_64-*-*]
-              || [istarget spu-*-*] } {
+              || [istarget x86_64-*-*] } {
            set et_vect_long_long_saved 1
         }
     }
