@@ -1,3 +1,11 @@
+2008-08-20  Victor Kaplansky  <victork@il.ibm.com>
+
+        * gcc.dg/vect/vect-multitypes-15.c: Fix typo.
+	* gcc/testsuite/lib/target-supports.exp
+	   (check_effective_target_vect_long_long): Remove spu-*-*.
+	* gcc.dg/vect/vect-multitypes-16.c: Make init loop unvectorizable.
+	* gcc.dg/vect/slp-widen-mult-u8.c: Likewise.
+	
 2008-08-20  Richard Guenther  <rguenther@suse.de>
 
 	* gcc.dg/tree-ssa/pr20701.c: Scan vrp1 dump.
